Fixed #36, Fixed #41, work for #34

--- a/document/main.bib
+++ b/document/main.bib
@@ -1129,6 +1129,12 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	note = {{ISBN} 3-900051-07-0},
 	url = {http://www.R-project.org/},
 }
+@article{nelson1967testing,
+	title={TESTING AND EVALUATION IN THE BIOLOGICAL SCIENCES.},
+	author={Nelson, Clarence H},
+	year={1967},
+	publisher={ERIC}
+}
 @misc{SunJDK,
 	key ={zzzSunJDK},
 	title={{Oracle Java SE} Downloads},
