--- a/document/main.tex
+++ b/document/main.tex
@@ -362,7 +362,7 @@ Borrowing from existing computer science education research, I developed concept
 
 
 Traditionally, concept inventories are used to  assess conceptual knowledge and identify misconceptions; in Computer Science, the target audience is typically CS1 students~\cite{tew2010developing,kaczmarczyk2010identifying}. 
-I need to assess knowledge with a wide range of developers outside of academia, therefore I could not borrow directly from research that creates concept inventories for novice academic programming concept knowledge assessment~\cite{tew2010assessing}. I combined existing concept inventory research with examinations using revised Bloom's Taxonomy~\cite{tew2010developing,nelson1967testing,scott2003bloom}. By using Bloom's Taxonomy to inform question creation, I increased assurance that my questions exhaustively assess understanding~\cite{scott2003bloom}. The current inventory has 10 questions, each worth 1 point, that assess knowledge and will serve as a representation of ground truth conceptual knowledge. 
+I need to assess knowledge with a wide range of developers outside of academia, therefore I could not borrow directly from research that creates concept inventories for novice academic programming concept knowledge assessment~\cite{tew2010assessing}. I combined existing concept inventory research with examinations using revised Bloom's Taxonomy~\cite{tew2010developing,nelson1967testing,scott2003bloom}. By using Bloom's Taxonomy to inform question creation, I increased assurance that my questions exhaustively assess understanding~\cite{scott2003bloom}. The current inventory has 10 questions, each worth 1 point, that effectively assess knowledge and will serve as a representation of ground truth conceptual knowledge; this is under the assumption that following validated steps for creation increases confidence in effectiveness as an assessment tool.
 The final process I have developed for creating general programming concept inventories is as follows:
 
 \vspace{0.5em}
